--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
   font-family: 'Roboto', sans-serif;
 }
 
@@ -47,4 +48,27 @@ body {
   background-color: #C7493A;
   grid-column: 1 / 2;
   grid-row: 1 / 4;
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+  align-items: center;
+}
+
+.addCategory {
+  color: #fff;
+  background-color: #161616;
+  border: none;
+  padding: 10px 15px;
+  border-radius: 30px;
+  font-size: 18px;
+  text-transform: uppercase;
+}
+
+.sidebar-title {
+  text-transform: uppercase;
+  font-size: 22px;
+  font-weight: bold;
+  color: #161616;
+  border-bottom: 3px solid #161616;
+  margin: 10px 0;
 }
