--- a/src/style.css
+++ b/src/style.css
@@ -11,6 +11,13 @@ body {
   display: grid;
   grid-template-columns: 1fr 8fr;
   background-color: #161616;
+  height: 100vh;
+}
+
+.main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 #form {
@@ -21,6 +28,7 @@ body {
   display: flex;
   flex-direction: column;
   border-radius: 5px;
+  margin: 30px;
 }
 
 #form > input {
@@ -72,6 +80,19 @@ input[type="radio"] + label {
 .todo > .title {
   font-size: 20px;
   font-weight: bold;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.closeBtn {
+  height: 20px;
+  width: 20px;
+  background-color: #C7493A;
+  color: #fff;
+  border: none;
+  border-radius: 50%;
 }
 
 .todo > .todo-footer {
@@ -83,7 +104,7 @@ input[type="radio"] + label {
 }
 
 .sidebar {
-  height: 100vh;
+  height: 100%;
   min-width: 210px;
   background-color: #C7493A;
   grid-column: 1 / 2;
@@ -92,7 +113,6 @@ input[type="radio"] + label {
   flex-direction: column;
   padding: 20px;
   align-items: center;
-  position: fixed;
 }
 
 .addCategory {
@@ -120,4 +140,28 @@ input[type="radio"] + label {
   color: #161616;
   border-bottom: 3px solid #161616;
   margin: 10px 0;
+}
+
+.addTodo {
+  font-size: 44px;
+  background-color: #c7493a;
+  color: #161616;
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  margin: 0 10px 10px 0;
+}
+
+.wrapper {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(128, 83, 83, 0.5);
+  z-index: 999;
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
