--- a/src/style.css
+++ b/src/style.css
@@ -18,6 +18,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding: 15px;
 }
 
 #form {
@@ -73,6 +74,7 @@ input[type="radio"] + label {
   padding: 20px 20px 10px 20px;
   border-radius: 10px;
   margin: 10px;
+  width: 100%;
   max-width: 700px;
   grid-column: 2 / -1;
 }
@@ -86,13 +88,17 @@ input[type="radio"] + label {
   margin-bottom: 10px;
 }
 
+.index {
+  display: none;
+}
+
 .closeBtn {
   height: 20px;
   width: 20px;
   background-color: #C7493A;
   color: #fff;
   border: none;
-  border-radius: 50%;
+  border-radius: 5px;
 }
 
 .todo > .todo-footer {
@@ -143,9 +149,9 @@ input[type="radio"] + label {
 }
 
 .addTodo {
-  font-size: 44px;
-  background-color: #c7493a;
-  color: #161616;
+  font-size: 22px;
+  background-color: #28a745;
+  color: #ffffff;
   position: fixed;
   bottom: 0;
   right: 0;
@@ -153,6 +159,7 @@ input[type="radio"] + label {
   height: 30px;
   border-radius: 50%;
   margin: 0 10px 10px 0;
+  border: 2px solid white;
 }
 
 .wrapper {
