--- a/src/style.css
+++ b/src/style.css
@@ -121,7 +121,7 @@ input[type="radio"] + label {
 
 .sidebar {
   height: 100%;
-  min-width: 210px;
+  min-width: 300px;
   background-color: #C7493A;
   grid-column: 1 / 2;
   grid-row: 1 / 4;
@@ -208,6 +208,14 @@ ul > li > p{
   text-transform: capitalize;
 }
 
-.allCategoriesP, .todayCategoriesP, .tommorowCategoriesP {
+.allCategoriesP, .todayCategoriesP, .weekCategoriesP {
   margin: 0;
+}
+
+select {
+  color: #fff;
+  background-color: #161616;
+  border: none;
+  border-radius: 3px;
+  padding: 5px;
 }
