added category to todo item

--- a/src/style.css
+++ b/src/style.css
@@ -119,6 +119,11 @@ input[type="radio"] + label {
   font-size: 12px;
 }
 
+.todoCategory {
+  color: #161616;
+  font-size: 12px;
+}
+
 .sidebar {
   height: 100%;
   min-width: 300px;
