--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap');
 
 * {
   margin: 0;
@@ -157,11 +158,11 @@ input[type="radio"] + label {
 
 .sidebar-title {
   text-transform: uppercase;
-  font-size: 22px;
+  font-size: 42px;
   font-weight: bold;
   color: #161616;
-  border-bottom: 3px solid #161616;
   margin: 10px 0;
+  font-family: 'Fredoka One', cursive;
 }
 
 .addTodo {
@@ -223,4 +224,53 @@ select {
   border: none;
   border-radius: 3px;
   padding: 5px;
+}
+
+.mobileSidebar {
+  position: absolute;
+  top: 9999px;
+  left: -9999px;
+  width: 100%;
+  height: 7%;
+  background-color: #C7493A;
+}
+
+.sidebar-img {
+  position: fixed;
+  margin-right: 10px;
+  right: 0;
+  width: 30px;
+}
+
+@media (max-width: 630px) {
+  body {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .sidebar {
+    position: absolute;
+    left: -9999px;
+    top: 9999px;
+  }
+
+  .mobileSidebar {
+    position: fixed;
+    top: auto;
+    left: auto;
+    width: 100%;
+    height: 7%;
+    background-color: #C7493A;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-transform: uppercase;
+    font-style: italic;
+    color: #fff;
+    letter-spacing: 3px;
+  }
+
+  .mobileSidebar > h1 {
+    font-family: 'Fredoka One', cursive;
+  }
 }
