--- a/src/style.css
+++ b/src/style.css
@@ -103,6 +103,15 @@ input[type="radio"] + label {
   border-radius: 5px;
 }
 
+.closeBtnForm {
+  height: 20px;
+  width: 20px;
+  background-color: #C7493A;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+}
+
 .closeSideBtn {
   height: 25px;
   width: 25px;
@@ -228,7 +237,7 @@ select {
 
 .mobileSidebar {
   position: absolute;
-  top: 9999px;
+  top: -9999px;
   left: -9999px;
   width: 100%;
   height: 7%;
@@ -242,6 +251,11 @@ select {
   width: 30px;
 }
 
+.closeBtnDiv {
+  display: flex;
+  justify-content: flex-end;
+}
+
 @media (max-width: 630px) {
   body {
     display: flex;
@@ -251,7 +265,7 @@ select {
   .sidebar {
     position: absolute;
     left: -9999px;
-    top: 9999px;
+    top: -9999px;
   }
 
   .mobileSidebar {
@@ -272,5 +286,6 @@ select {
 
   .mobileSidebar > h1 {
     font-family: 'Fredoka One', cursive;
+    font-size: 16px;
   }
 }
