--- a/src/style.css
+++ b/src/style.css
@@ -101,24 +101,34 @@ input[type="radio"] + label {
   color: #fff;
   border: none;
   border-radius: 5px;
+  line-height: 20px;
+  cursor: pointer;
 }
 
 .closeBtnForm {
+  line-height: 20px;
   height: 20px;
   width: 20px;
   background-color: #C7493A;
   color: #fff;
   border: none;
   border-radius: 5px;
+  cursor: pointer;
 }
 
 .closeSideBtn {
+  line-height: 20px;
   height: 25px;
   width: 25px;
-  background-color: #161616;
+  background-color: #C7493A;
   color: #fff;
   border: none;
   border-radius: 3px;
+  margin-right: 5px;
+}
+
+.closeSideBtn:hover {
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
 .todo > .todo-footer {
@@ -142,7 +152,6 @@ input[type="radio"] + label {
   grid-row: 1 / 4;
   display: flex;
   flex-direction: column;
-  padding: 20px;
   align-items: center;
 }
 
@@ -186,6 +195,7 @@ input[type="radio"] + label {
   border-radius: 50%;
   margin: 0 10px 10px 0;
   border: 2px solid white;
+  cursor: pointer;
 }
 
 .wrapper {
@@ -212,19 +222,26 @@ ul > li {
 }
 
 ul > li > p{
-  color: #ffffff;
-  background-color: #161616;
+  color: #b3b3b3;
   padding: 5px 20px;
   width: 100%;
-  border-radius: 3px;
-  text-align: center;
   font-size: 14px;
   margin: 0px 5px 0 0;
-  text-transform: capitalize;
+  cursor: pointer;
+  font-weight: bold;
+}
+
+ul > li > p:hover {
+  color: #fff;
+  transform: scale(1.05);
 }
 
 .allCategoriesP, .todayCategoriesP, .weekCategoriesP {
   margin: 0;
+}
+
+.weekCategoriesP {
+  border-bottom: 1px solid black;
 }
 
 select {
@@ -254,6 +271,21 @@ select {
 .closeBtnDiv {
   display: flex;
   justify-content: flex-end;
+}
+
+.closeSidebarBtn {
+  height: 20px;
+  width: 20px;
+  background-color: #A33327;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  line-height: 20px;
+  position: absolute;
+  top: -9999px;
+  margin: 5px;
+  font-size: 15px;
+  cursor: pointer;
 }
 
 @media (max-width: 630px) {
@@ -287,5 +319,18 @@ select {
   .mobileSidebar > h1 {
     font-family: 'Fredoka One', cursive;
     font-size: 16px;
+  }
+
+  .main {
+    margin-top: 40px;
+  }
+
+  #form {
+    margin: 30px;
+  }
+
+  .closeSidebarBtn {
+    right: 0;
+    top: 0;
   }
 }
